5/24/13 set up skeleton for Molarity sim
5/24/13 create molarity repo in GitHub