@@ -2,5 +2,34 @@
 
 define(
     {
-      "molarity": "Molarity"
+      "molarity": "Molarity",
+      "full": "full",
+      "high": "high",
+      "liters": "Liters",
+      "low": "low",
+      "lots": "lots",
+      "moles": "moles",
+      "none": "none",
+      "saturated": "Saturated!",
+      "showValues": "Show values",
+      "solute": "Solute",
+      "soluteAmount": "<center>Solute<br>Amount",
+      "solutionConcentration": "<center>Solution<br>Concentration",
+      "solutionVolume": "<center>Solution<br>Volume",
+      "units.liters": "L",
+      "units.molarity": "M",
+      "units.moles": "mol",
+      "zero": "zero",
+      "cobaltIINitrate": "Cobalt (II) nitrate",
+      "cobaltChloride": "Cobalt chloride",
+      "copperSulfate": "Copper sulfate",
+      "drinkMix": "Drink mix",
+      "goldIIIChloride": "Gold (III) chloride",
+      "nickelIIChloride": "Nickel (II) chloride",
+      "potassiumChromate": "Potassium chromate",
+      "potassiumDichromate": "Potassium dichromate",
+      "potassiumPermanganate": "Potassium permanganate",
+      "pattern_0label": "{0}:",
+      "pattern_0value_1units": "{0} {1}",
+      "pattern_parentheses_0text": "({0})"
     } );
